--- a/index.html
+++ b/index.html
@@ -15,26 +15,22 @@
     <script>
       //La configuración Firebase de tu aplicación web
       var firebaseConfig = {
-    apiKey: "AIzaSyAlYTDtmHd5ebKMonZUo7lnweOzDdBo40E",
-    authDomain: "myquiz-game.firebaseapp.com",
-    databaseURL: "https://myquiz-game-default-rtdb.firebaseio.com",
-    projectId: "myquiz-game",
-    storageBucket: "myquiz-game.appspot.com",
-    messagingSenderId: "135491178213",
-    appId: "1:135491178213:web:7fd97cb4bc6b0b0b4c0e0c"
+    apiKey: "AIzaSyAA5vdt-WUjjAc-eJ9rR9nCWV058fpMStQ",
+    authDomain: "jogomeuquestionario-67c90.firebaseapp.com",
+    databaseURL: "https://jogomeuquestionario-67c90-default-rtdb.firebaseio.com",
+    projectId: "jogomeuquestionario-67c90",
+    storageBucket: "jogomeuquestionario-67c90.appspot.com",
+    messagingSenderId: "534159356550",
+    appId: "1:534159356550:web:b8a378a898a5dcac3a5707"
   };
 
-
-      // // Inicializar Firebase
-      // firebase.initializeApp(firebaseConfig);
-
-    // Inicializar Firebase
-    firebase.initializeApp(firebaseConfig);
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig)
     </script>
 
-    <script src="js/Contestant.js"></script>
-    <script src="js/Question.js"></script>
-    <script src="js/Quiz.js"></script>
+    <script src="Contestant.js"></script>
+    <script src="Question.js"></script>
+    <script src="Quiz.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
