--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
     <script>
       //La configuración Firebase de tu aplicación web
-      var firebaseConfig = {
-    apiKey: "AIzaSyAA5vdt-WUjjAc-eJ9rR9nCWV058fpMStQ",
-    authDomain: "jogomeuquestionario-67c90.firebaseapp.com",
-    databaseURL: "https://jogomeuquestionario-67c90-default-rtdb.firebaseio.com",
-    projectId: "jogomeuquestionario-67c90",
-    storageBucket: "jogomeuquestionario-67c90.appspot.com",
-    messagingSenderId: "534159356550",
-    appId: "1:534159356550:web:b8a378a898a5dcac3a5707"
+      const firebaseConfig = {
+    apiKey: "AIzaSyD4Ff9TZrdhATVQO8ARA6sc6VV94mMbsOY",
+    authDomain: "quiz-863c5.firebaseapp.com",
+    databaseURL: "https://quiz-863c5-default-rtdb.firebaseio.com/",
+    projectId: "quiz-863c5",
+    storageBucket: "quiz-863c5.appspot.com",
+    messagingSenderId: "749798452826",
+    appId: "1:749798452826:web:379bc821f96a9461abb263"
   };
 
   // Initialize Firebase
